--- a/work/fourth/index.html
+++ b/work/fourth/index.html
@@ -56,6 +56,23 @@
       // .next() 要素の隣の要素を取得します。これは使わなくてもできます。
       // .children() 要素の子要素を取得します。
       // .stop() 現在動作中のアニメーション処理を全て中止します。
+
+    // $(function() {
+    //   $('.menu__list li').hover(function() {
+    //     $("ul:not(:animated)", this).slideDown();
+    //   }, function(){
+    //     $('.menu__list__childList',this).slideUp();
+    //   });
+    // });
+
+    $(function() {
+      $('.menu__list li').hover(function() {
+        $(this).children('.menu__list__childList').stop(true).slideDown();
+      }, function() {
+        $(this).children('.menu__list__childList').stop(true).slideUp();
+      });
+    });
+
     </script>
   </body>
 </html>
