--- a/work/second/index.html
+++ b/work/second/index.html
@@ -23,7 +23,16 @@
     <script>
       // 今回やるのはモーダルです。
       // .modal-show をクリックすることで .modal をfadeInさせる。
-      // .modal-close をクリックで .modal をfadeOutさせる。
+      $(function(){
+        $('.modal-show').click(function () {
+          $('.modal').fadeIn();
+        });
+        
+        // .modal-close をクリックで .modal をfadeOutさせる。
+        $('.modal-close').click(function () {
+          $('.modal').fadeOut();
+        });
+      });
       // .click() クリック時のイベントを登録する。
       // .fadeIn() 一定時間かけてフェードインする。
       // .fadeOut() 一定時間かけてフェードアウトする。
