--- a/work/fifth/index.html
+++ b/work/fifth/index.html
@@ -98,16 +98,16 @@
       // .change() セレクトボックスの値の変更をキャッチする関数
       // $().each() DOM要素を1つずつループ処理をする（ループ内で$(this)を使うと要素がひとつずつ取得できる）
       $(function() {
-        $(".select").change(function(){
-          var v = $(this).val();
-          if(v=="all"){
-            $('ul.list li').each(function(){$(this).show()});
+        $('.select').change(function(){
+          var selectValue = $(this).val();
+          if (selectValue === "all") {
+            $('ul.list li').show();
           } else {
-            $('ul.list li').each(function(){
-              if($(this).data("category-type")==v){
-                $(this).show();
+            $('ul.list li').each(function(i, list){
+              if (selectValue === $(list).data("category-type")) {
+                $(list).show();
               } else {
-                $(this).hide();
+                $(list).hide();
               }
             });
           }
