--- a/work/tenth/index.html
+++ b/work/tenth/index.html
@@ -28,6 +28,122 @@
     <script src="../../common/js/jquery.js"></script>
     <script src="./js/appid.js"></script>
     <script>
+      $(function() {
+        var page = null;
+        var word = null;
+        $('[data-js="search-btn"]').on('click', function() {
+          page = 1;
+          word = $('[data-js="search-word"]').val();
+          clearList();
+          getBookData();
+        });
+
+        $(document).on('click', '[data-js="page-next"]', function(e) {
+          e.preventDefault();
+          if ($(this).hasClass('disabled')) {
+            return false;
+          }
+          clearList();
+          page ++;
+          getBookData();
+        });
+
+        $(document).on('click', '[data-js="page-prev"]', function(e) {
+          e.preventDefault();
+          if ($(this).hasClass('disabled')) {
+            return false;
+          }
+          clearList();
+          page --;
+          getBookData();
+        });
+
+        function clearList() {
+          $('.lists').empty();
+          $('.pager').remove();
+          $('.message').empty();
+        }
+
+        function getBookData() {
+          $.ajax({
+            url: 'https://app.rakuten.co.jp/services/api/BooksTotal/Search/20130522',
+            type: 'GET',
+            datatype: 'json',
+            data: {
+              // 「区分:サービス固有パラメーター」を確認して、必要な情報をdata内に入れましょう。
+              applicationId: appId,
+              booksGenreId: '001',
+              keyword: word,
+              hits: 20,
+              page: page
+            },
+          }).done(function(data) {
+            // この中にデータ取得後の動きを記述していきます。
+            if (data.count === 0) {
+              $('.message').append('検索結果が見つかりませんでした。</br>別のキーワードで検索して下さい。')
+            } else {
+              showlist(data);
+              showPager(data);
+            }
+          }).fail(function(error) {
+            var message = '';
+            switch (error.status) {
+              case 400:
+                message = '検索文字が入力されていません。';
+                break;
+              case 429:
+                message = 'リクエスト過多です。しばらく時間を置いてからお試しください。';
+                break;
+              case 0:
+                message = '通信に失敗しました。インターネットの接続をご確認ください。';
+                break;
+              default:
+                message = '予期せぬエラーが発生しました。';
+                break;
+            }
+            $('.message').append(message);
+          });
+        }
+
+        function showlist(books) {
+          var lists = '';
+          $.each(books.Items, function(i, book) {
+            lists +=
+              '<li class="lists__item">' +
+                '<div class="lists__item__inner">' +
+                  '<a href="" class="lists__item__link" target="_blank">' +
+                    '<img src="' + book.Item.largeImageUrl + '" class="lists__item__img" alt="">' +
+                    '<p class="lists__item__detail">作品名：' + book.Item.title + '</p>' +
+                    '<p class="lists__item__detail">作者　：' + book.Item.author + '</p>' +
+                    '<p class="lists__item__detail">出版社：' + book.Item.publisherName + '</p>' +
+                  '</a>' +
+                '</div>' +
+              '</li>';
+            })
+            $('.lists').append(lists);
+        }
+
+        function showPager(data) {
+          var pager =
+            '<div class="pager" data-js="pager">' +
+              '<div class="counter">' +
+                '<span class="counter-current">'  + data.page +' </span>' + '/' + '<span class="counter-all">' + data.pageCount + '</span>' +
+              '</div>' +
+              '<div class="btn-wrapper">' +
+                '<a class="btn-item" data-js="page-prev" href=””>前へ</a>' +
+                '<a class="btn-item" data-js="page-next" href=””>次へ</a>' +
+              '</div>' +
+            '</div>'
+          $('.lists').after(pager);
+
+          if (data.page === 1) {
+            $('[data-js="page-prev"]').addClass('disabled');
+          }
+          if (data.page === data.pageCount) {
+            $('[data-js="page-next"]').addClass('disabled');
+          }
+        }
+      });
       // 楽天ブックスの総合検索APIを使って製作してください。
       // answerの挙動を良く見てね！
       //
